k8s_conf/networking/celerybeat_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: celerybeat-clusterip
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    component: celerybeat
  type: ClusterIP
