k8s_conf/networking/celeryworker_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: celeryworker-clusterip
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    component: celeryworker
  type: ClusterIP
