k8s_conf/networking/django_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-clusterip
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    component: django
  type: ClusterIP
