k8s_conf/networking/postgres_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    component: postgres
  type: ClusterIP
