k8s_conf/networking/react_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: react
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    component: react
  type: ClusterIP
