k8s_conf/networking/cluster_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
      - http:
            paths:
              - path: /
                pathType: Prefix
                backend: 
                  service:
                    name: react
                    port:
                      number: 80
              - path: /api/
                pathType: Prefix
                backend:
                  service:
                    name: django
                    port:
                      number: 5000
              - path: /auth/
                pathType: Prefix
                backend:
                  service:
                    name: django
                    port:
                      number: 5000
